New endpoints and improvements
